--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
-- script: echo Hello, ${target}!
+- script: echo Hello, ${{ target }}!
   displayName: 'Run a one-line script'
 
 - script: |
